kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-api
  namespace: student-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: student-api

  template:
    metadata:
      labels:
        app: student-api

    spec:
      containers:
        - name: student-api
          image: manishanegi/student-app-api:v2

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
