kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-api-service
  namespace: student-app

spec:
  selector:
    app: student-api

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
